--- a/Email/css/style.css
+++ b/Email/css/style.css
@@ -36,10 +36,19 @@ a{
     text-decoration: none;
     border: 2px solid black;
     border-radius: 2rem;
+    padding: 1rem;
+}
+#sinistra{
     position: relative;
     top: 310px;
     left: 25px;
-    padding: 1rem;
+    background-color: rgb(82, 9, 9);
+    color: white;
+}
+#destra{
+    position: absolute;
+    top: 310px;
+    right: 25px;
     background-color: #d540cd;
     color: black;
 }
